
        Hack around RT#66485 to be able to use done_testing() together
        with Test::NoWarnings. Also fixes number of skipped tests in
        t/basic-functionality.t on non-debianoid platforms.

        Fix Author vs Release test in t/manifest.t's skip message.

        Only run t/changes.t if $RELEASE_TESTING is set.

        Update t/win-*.t skip messages to in line with the others.

0.07    2014-09-10 00:33:03+02:00

        Add test that the change log conforms to CPAN::Changes::Spec.

        Convert dates in change log to conform with
        CPAN::Changes::Spec.

        Require CPAN::Changes >= 0.23 for running the test suite.

        Switch to Dist::Zilla (with ExtUtils::MakeMaker) instead of
        Module::Build. Remove convenience Makefile.

        Fix Perl::Critic warning "Don't modify $_ in list functions"

        Consider Modern::Perl as ok for
        Perl::Critic::Policy::TestingAndDebugging::RequireUseStrict

        Use Travis CI for smoke testing and Coveralls.io for coverage
        reporting.

        Fix passing backends as reference. Add test for that.

        Use "use_ok" instead of "use" in all tests.

        Drop unreachable else clause while listing the directory
        contents.

        Simplify condition in Run::Parts::Debian::run_parts_command.

        Further new tests added:
        + Verify behaviour upon unknown backend parameter.
        + Verify that chomped_lines and lines die if called like a method.
        + Alternative backend names (module=perl, run-parts=debian)

0.06    2013-07-22 20:47:16+02:00

        Bump Module::Build requirement to 0.4004 for test_requires.

        Remove all environment variables listed as relevant for taint
        mode in perlsec(1) from the affected tests.

0.05    2013-07-21 17:56:01+02:00

        Fix test skipping numbers in t/basic-functionality.t.

        Documentation deduplication.

0.04    2013-07-10 19:55:57+02:00

        New method concat.
